[tool.poetry]
name = "labthings-client"
version = "0.1.0"
description = "A simple Python client for LabThings devices"
authors = ["jtc42 <jtc9242@gmail.com>"]
classifiers = [
    "Topic :: System :: Hardware",
    "Topic :: Internet :: WWW/HTTP"
]

[tool.poetry.dependencies]
python = "^3.7"
zeroconf = "^0.26.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
